Sat Jun  8 14:17:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check for NET_LUID.  header macro varies across
	  complier versions.

	* win32/win32.c: use configured macro.

Sat Jun  8 11:59:55 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (int_pair_to_real_inclusive): Use rb_funcall instead of
	  rb_big_mul because rb_integer_unpack can return a Fixnum.

Sat Jun  8 11:17:39 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (int_pair_to_real_inclusive): Use rb_integer_pack.

Sat Jun  8 09:49:42 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (int_pair_to_real_inclusive): Use rb_integer_unpack.

Sat Jun  8 08:12:22 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (random_load): Use rb_integer_pack.

Sat Jun  8 06:15:46 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (numberof): Removed.

Sat Jun  8 06:00:47 2013  Tanaka Akira  <akr@fsij.org>

	* random.c: include internal.h.
	  (mt_state): Use rb_integer_unpack.

Sat Jun  8 00:55:51 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (integer_pack_loop_setup): word_num_nailbytes_ret argument
	  removed.
	  (rb_integer_pack): Follow the above change.
	  (rb_integer_unpack): Follow the above change.

Sat Jun  8 00:37:32 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (validate_integer_pack_format): Renamed from
	  validate_integer_format.
	  (integer_pack_loop_setup): Renamed from integer_format_loop_setup.
	  (integer_pack_fill_dd): Renamed from int_export_fill_dd.
	  (integer_pack_take_lowbits): Renamed from int_export_take_lowbits.
	  (integer_unpack_push_bits): Renamed from int_import_push_bits.

Fri Jun  7 23:58:06 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_pack): Arguments changed.  Use flags to
	  specify word order and byte order.
	  (rb_integer_unpack): Ditto.
	  (validate_integer_format): Follow the above change.
	  (integer_format_loop_setup): Ditto.

	* pack.c: Ditto.

	* internal.h: Ditto.
	  (INTEGER_PACK_MSWORD_FIRST): Defined.
	  (INTEGER_PACK_LSWORD_FIRST): Ditto.